# pwmk_firmware

./: .gitignore  CMakeLists.txt  LICENSE  README.md  btstack_config.h  main.c  pico_sdk_import.cmake  pyproject.toml  tusb_config.h
ble/: ble.c  ble.h  ble_stub.c  le_device_db_tlv_custom.c  le_device_db_tlv_custom.h  picomk.gatt
docs/: ビルドテスト手順.md  ビルド手順.md  ビルド手順_CLI.md  ビルド手順_VSCode.md  内部処理_プロファイルシステム.md  内部処理_処理フロー.md  方針.md
keyboard/: code.h  event.c  matrix_scan.h
peripheral/: peripheral.h
settings/: keymap.h  settings.h  users.h
src/: main.c  tusb_config.h
src/ble/: advertising_data.c  advertising_data.h  ble.c  ble.h  ble_stub.c  le_device_db_tlv_custom.c  le_device_db_tlv_custom.h
src/hid/: hid.c  hid.h
src/keyboard/: code.c  code.h  event.c  event.h  matrix_scan.c  matrix_scan.h
src/led/: led.c  led.h  ws2812.pio.h
src/peripheral/: peripheral.c  peripheral.h
src/pinnacle/: pinnacle.c  pinnacle.h
src/settings/: board.c  board.h  keymap.c  keymap.h  settings.c  settings.h  users.c  users.h
src/state/: sleep.c  sleep.h  state.c  state.h
src/usb/: usb_descriptors.c  usb_descriptors.h  usb_hid.c  usb_hid.h  usb_hid_stub.c
state/: sleep.c  state.c  state.h
tools/: build.py  pwmk.py  pwmk_build.py  pwmk_build_prep.py  pwmk_cli.py  pwmk_common.py  pwmk_profile.py  test_build.py  test_profile.py
tools/templates/profile/: board.c.j2  board.h.j2  keymap.c.j2  keymap.h.j2  profile.cmake.j2  settings.c.j2  settings.h.j2
usb/: usb_descriptors.c  usb_hid.c  usb_hid.h
users/remopicon_v1/: profile.yaml  users.c
