[project]
name = "pwmk-firmware-tools"
version = "0.1.0"
description = "Build and test helper scripts for pwmk_firmware"
requires-python = ">=3.11"
dependencies = [
	"jinja2>=3.1,<4",
	"pydantic>=2.11,<3",
	"python-on-whales>=0.81,<1",
	"PyYAML>=6.0,<7",
	"typer>=0.16,<1",
]

[tool.uv]
package = false
